Added basic day/night theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Images">
-        <activity android:name="com.wajahatkarim3.imagine.MainActivity">
+        android:theme="@style/Theme.Imagine">
+        <activity android:name="com.wajahatkarim3.imagine.ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
