--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.21"
+    ext {
+        kotlin_version = '1.4.21'
+        lifecycle_version = "2.2.0"
+        appcompat_version = "1.2.0"
+        constraint_layout_version = "2.0.4"
+        material_version = "1.2.1"
+    }
+
     repositories {
         google()
         jcenter()
