--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         appcompat_version = "1.2.0"
         constraint_layout_version = "2.0.4"
         material_version = "1.2.1"
+        nav_version = "2.3.1"
     }
 
     repositories {
