--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,11 @@ buildscript {
         constraint_layout_version = "2.0.4"
         material_version = "1.2.1"
         nav_version = "2.3.1"
+        dagger_version = "2.30.1"
+        retrofit_version = "2.9.0"
+        coroutines_version = "1.3.5"
+        gson_version = "2.8.6"
+        okhttp_version = "4.9.0"
     }
 
     repositories {
