--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -22,5 +22,7 @@ jobs:
       - name: Validate Gradle Wrapper
         uses: gradle/wrapper-validation-action@v1
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Run Unit tests
         run: ./gradlew test --stacktrace
