--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
 
     repositories {
         google()
+        mavenCentral()
         maven { url "https://www.jitpack.io" }
         jcenter()
     }
@@ -33,6 +34,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         maven { url "https://www.jitpack.io" }
         jcenter()
     }
