--- a/build.gradle
+++ b/build.gradle
@@ -43,3 +43,22 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+subprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+
+    apply plugin: 'com.diffplug.spotless'
+    spotless {
+        kotlin {
+            target '**/*.kt'
+            targetExclude("$buildDir/**/*.kt")
+            targetExclude('bin/**/*.kt')
+
+            ktlint("0.40.0")
+            licenseHeaderFile rootProject.file('spotless/copyright.kt')
+        }
+    }
+}
