Fix Spotless bug

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'com.diffplug.spotless' version '5.7.0'
+}
+
 allprojects {
     repositories {
         google()
@@ -38,8 +42,4 @@ allprojects {
         maven { url "https://www.jitpack.io" }
         jcenter()
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
