--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -87,6 +87,9 @@ jobs:
         with:
           java-version: 11
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Run instrumentation tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
