--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -58,16 +58,22 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gems-
 
-      - name: Danger
+#      - name: Danger
+#        if: ${{ always() }}
+#        uses: MeilCli/danger-action@v5.1.1
+#        with:
+#          plugins_file: 'Gemfile'
+#          install_path: 'vendor/bundle'
+#          danger_file: 'Dangerfile'
+#          danger_id: 'danger-pr'
+#        env:
+#          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
+
+      - name: Danger Kotlin
         if: ${{ always() }}
-        uses: MeilCli/danger-action@v5.1.1
-        with:
-          plugins_file: 'Gemfile'
-          install_path: 'vendor/bundle'
-          danger_file: 'Dangerfile'
-          danger_id: 'danger-pr'
+        uses: danger/kotlin@0.7.1
         env:
-          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
 
   test:
     needs: spotless
