--- a/.github/workflows/pr_worklow.yml
+++ b/.github/workflows/pr_worklow.yml
@@ -30,7 +30,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Build project
-        run: ./gradlew spotlessCheck assembleDebug lintDebug --stacktrace
+        run: ./gradlew assembleDebug lintDebug --stacktrace
 
       - name: Upload build outputs (APKs)
         uses: actions/upload-artifact@v2
