Lint reports with Danger Kotlin integration - temporary removed spotless check

--- a/.github/workflows/pr_worklow.yml
+++ b/.github/workflows/pr_worklow.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build-reports
-          path: app/build/reports
+          path: '**/build/reports'
 
       # Danger
       - name: Danger Kotlin
