--- a/.github/workflows/pr_worklow.yml
+++ b/.github/workflows/pr_worklow.yml
@@ -46,11 +46,34 @@ jobs:
           path: '**/build/reports'
 
       # Danger
-      - name: Danger Kotlin
+      - name: Install Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.6'
+
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('Gemfile') }} # change your gemfile path
+          restore-keys: |
+            ${{ runner.os }}-gems-
+
+      - name: Danger
         if: ${{ always() }}
-        uses: danger/kotlin@0.7.1
+        uses: MeilCli/danger-action@v5
+        with:
+          plugins_file: 'Gemfile'
+          install_path: 'vendor/bundle'
+          danger_file: 'Dangerfile'
+          danger_id: 'danger-pr'
         env:
-          GITHUB_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
+
+#      - name: Danger Kotlin
+#        if: ${{ always() }}
+#        uses: danger/kotlin@0.7.1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.DANGER_GITHUB_TOKEN }}
 
   test:
     needs: spotless
