--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
     androidExtensions {
         features = ["parcelize"]
     }
+    lintOptions {
+        disable "UnsafeExperimentalUsageError", "UnsafeExperimentalUsageWarning"
+    }
 }
 
 dependencies {
