Added the Code Coverage

--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,7 +1,8 @@
 name: Unit and UI Tests
 on:
-  push:
-    branches: [ main ]
+  [pull_request]
+#  push:
+#    branches: [ main ]
 
 jobs:
   spotless:
@@ -107,7 +108,7 @@ jobs:
           api-level: ${{ matrix.api-level }}
           arch: x86
           disable-animations: true
-          script: ./gradlew connectedCheck --stacktrace
+          script: ./gradlew connectedCheck jacocoTestReportDebug --stacktrace
 
       - name: Upload test reports
         if: always()
@@ -115,3 +116,9 @@ jobs:
         with:
           name: test-reports
           path: app/build/reports
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: app/build/reports/jacoco/debug/jacoco.xml
