--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -1,8 +1,7 @@
 name: Unit and UI Tests
 on:
-  [pull_request]
-#  push:
-#    branches: [ main ]
+  push:
+    branches: [ main ]
 
 jobs:
   spotless:
