--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ plugins {
     id 'dagger.hilt.android.plugin'
     id 'com.diffplug.spotless'
     id 'com.vanniktech.android.junit.jacoco'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -86,6 +87,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:26.7.0')
 
     // Third-party
     implementation 'com.google.android:flexbox:2.0.1'
