--- a/.github/workflows/deploy-to-play.yml
+++ b/.github/workflows/deploy-to-play.yml
@@ -9,11 +9,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Code
       - uses: actions/checkout@v2
-
       - name: Setup JDK
-        uses: actions/setup-java@v1
+      - uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
@@ -21,11 +19,10 @@ jobs:
         run: ./gradlew build
 
       - name: Assemble Release Build
-        run: |
-          ./gradlew bundleRelease
+        run: ./gradlew bundleRelease
 
       - name: Sign Release
-        uses: r0adkll/sign-android-release@v1
+      - uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -44,7 +41,7 @@ jobs:
         run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > service_
 
       - name: Deploy to Alpha
-        uses: r0adkll/upload-google-play@v1
+      - uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.wajahatkarim3.imagine
