--- a/.github/workflows/deploy-to-play.yml
+++ b/.github/workflows/deploy-to-play.yml
@@ -10,19 +10,20 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+
       - name: Setup JDK
-      - uses: actions/setup-java@v1
+        uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
       - name: Build
-      - run: ./gradlew build
+        run: ./gradlew build
 
       - name: Assemble Release Build
-      - run: ./gradlew bundleRelease
+        run: ./gradlew bundleRelease
 
       - name: Sign Release
-      - uses: r0adkll/sign-android-release@v1
+        uses: r0adkll/sign-android-release@v1
         with:
           releaseDirectory: app/build/outputs/bundle/release
           signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -31,17 +32,17 @@ jobs:
           keyPassword: ${{ secrets.KEY_PASSWORD }}
 
       - name: Tag Release
-      - run: |
+        run: |
           version_name=${GITHUB_REF##*/}
           echo "Tagging release with tag $version_name"
           git tag $version_name release/$version_name
           git push origin --tags
 
       - name: Create service_account.json
-      - run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > service_
+        run: echo "${{ secrets.SERVICE_ACCOUNT_JSON }}" > service_
 
       - name: Deploy to Alpha
-      - uses: r0adkll/upload-google-play@v1
+        uses: r0adkll/upload-google-play@v1
         with:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.wajahatkarim3.imagine
