--- a/.github/workflows/deploy-to-play.yml
+++ b/.github/workflows/deploy-to-play.yml
@@ -16,6 +16,9 @@ jobs:
         with:
           java-version: 1.8
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Build
         run: ./gradlew build
 
