--- a/.github/workflows/deploy-to-play.yml
+++ b/.github/workflows/deploy-to-play.yml
@@ -2,7 +2,7 @@ name: Deploy to Google Play Store
 on:
   push:
     branches:
-      - release/
+      - "release/**"
 
 jobs:
   deploy:
@@ -16,8 +16,8 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Build
-        run: ./gradlew build
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
 
       - name: Assemble Release Build
         run: ./gradlew bundleRelease
