--- a/.github/workflows/deploy-to-play.yml
+++ b/.github/workflows/deploy-to-play.yml
@@ -47,4 +47,4 @@ jobs:
           serviceAccountJsonPlainText: ${{ secrets.SERVICE_ACCOUNT_JSON }}
           packageName: com.wajahatkarim3.imagine
           releaseFile: app/build/outputs/bundle/release/app-release.aab
-          track: alpha
+          track: internal
