MODIFIED:1- binding all the data to xml using dataBinding, 2- apply databinding in homeFragment for search

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
     androidExtensions {
         features = ["parcelize"]
