Added the fastlane and screengrab.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,7 +104,11 @@ dependencies {
     testImplementation "com.squareup.okhttp3:mockwebserver:$okhttp_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation "io.mockk:mockk-android:1.10.6"
+
+    // Fastlane
+    androidTestImplementation 'tools.fastlane:screengrab:2.1.0'
 }
 
 spotless {
