--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,19 @@ android {
         applicationId "com.wajahatkarim3.imagine"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 5
+        versionCode 6
         versionName "0.0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+
+    signingConfigs {
+        config {
+            keyAlias = 'fakealiaskey'
+            keyPassword 'fakepassword'
+            storePassword 'fakepassword'
+            storeFile file('../imagine-keystore')
+        }
     }
 
     buildTypes {
@@ -30,6 +39,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
     compileOptions {
